<resources>
    <string name="app_name">urBus</string>
    <string name="logo">logo</string>
    <string name="reset">إعادة تعيين كلمة المرور</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="email_input">أدخل بريدك الإلكتروني</string>
    <string name="send">إرسال</string>
    <string name="message">ادخل عنوان بريدك الإلكتروني وسنرسل لك إرشادات حول كيفية إعادة تعيين كلمة المرور الخاصة بك</string>
    <string name="cancel">إلغاء</string>
    <string name="title_activity_student_home">student_home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label">الإشعارات</string>
    <string name="title_activity_student_home2">student_home2</string>
    <string name="map_view">الخريطة</string>
    <string name="search_box_maps">البحث</string>
    <string name="search_icon">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>