<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".password_reset"
    android:background="@color/background"
    android:padding="25dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_input"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:inputType="textEmailAddress"
        />


    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:shadowColor="@color/black"
        android:text="@string/send"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        tools:ignore="TextContrastCheck"/>

    <Button
        android:id="@+id/b2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:shadowColor="@color/black"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/gray"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
</RelativeLayout>
